--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 	<h1>
 		<a href="index.html">Home Page </a>
 	</h1>
-	<h2> <em> Here is Adnan's social media account. Visit all platfrom. Connect with Us! </em></h2> <br>
+	<h2> <em> Here is Adnan's social media account. Visit all platfrom. Connected with Us! </em></h2> <br>
 
 	<img src="img/adnan.jpg" alt="adnan.image">
 	<h3>
@@ -53,5 +53,6 @@
 
 	</h3>
 </body>
+
 
 </html>
